# Encap

./: CMakeLists.txt
mylib/: CMakeLists.txt
mylib/include/: Client.h  Console.h  DoThatFunction.h  Media.h  MediaLibrary.h  UseThatHelpingFunction.h
mylib/src/: Client.cpp  Console.cpp  DoThatFunction.cpp  Media.cpp  MediaLibrary.cpp  UseThatHelpingFunction.cpp
sample/: CMakeLists.txt
sample/src/: main.cpp
